--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,10 +1,10 @@
-/* .test {
+.test {
   background: rgba(0,0,0,0.5);
   border: 1px solid red;
   padding: 20px;
+  
+  button {
+    padding: 10px;
+    border: 1px dashed green;
+  }
 }
-
-.test button {
-  padding: 10px;
-  border: 1px dashed;
-} */
