--- a/src/index.scss
+++ b/src/index.scss
@@ -1,26 +1,20 @@
-/* @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');*/
+// @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,600';
+
+body, html {
+  width: 100%;
+  height: 100%;
+}
 
 html {
   background-color: #e7ebf0;
   color: #222;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
-
-:global .clear:after, :global .clearfix:after {
-  display: block;
-  content: "";
-  clear: both;
-}
-
-* {
-  box-sizing: border-box;
+  & > div {
+    height: 100%;
+  }
 }
