--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -19,19 +19,7 @@
   }
 }
 
-.order-form {
-  background: #F2F2F2;
-  box-shadow: 0 0 5px rgba(0,0,0,0.5);
-  border-radius: 3px;
-  padding: 20px;
-  label {
-    font-size: 14px;
-    margin-bottom: 0;
-    text-transform: uppercase;
-  }
-  button {
-    width: 100%;
-    padding-top: .2rem;
-    padding-bottom: .2rem;
-  }
+
+.trades-table {
+
 }
