--- a/src/components/OrderForm/styles.scss
+++ b/src/components/OrderForm/styles.scss
@@ -3,6 +3,7 @@
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
   border-radius: 3px;
   padding: 20px;
+  margin-bottom: 30px;
   label {
     font-size: 14px;
     margin-bottom: 0;
